k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-imaging-access
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reference
  namespace: smart-imaging-access
spec:
  selector:
    matchLabels:
      app: reference
  replicas: 1
  template:
    metadata:
      namespace: smart-imaging-access
      labels:
        app: reference
    spec:
      volumes:
      - configMap:
          name: orthanc-config
        name: orthanc-config-volume
      containers:
      - name: proxy
        image: imaging-proxy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: proxy
        args:
        - /bin/bash
        - -c
        - >
          cd examples;
          ./wait-for-server.sh;
          ./load-examples.sh;
          cd ..;
          deno run --allow-all src/index.ts;
      - name: launcher
        image: smartonfhir/smart-launcher-2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: launcher-web
      - name: orthanc
        image: jodogne/orthanc-plugins:1.11.0
        volumeMounts:
        - name: orthanc-config-volume
          subPath: config.json
          mountPath: /etc/orthanc/orthanc.json
        ports:
        - containerPort: 8042
          name: orthanc-web
---
apiVersion: v1
kind: Service
metadata:
  name: reference
  namespace: smart-imaging-access
spec:
  selector:
    app: reference
  ports:
  - name: proxy
    protocol: TCP
    port: 8000
    targetPort: proxy
  - name: launcher
    protocol: TCP
    port: 80
    targetPort: launcher-web
  - name: orthanc-web
    protocol: TCP
    port: 8042
    targetPort: orthanc-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: smart-imaging-access
  name: reference
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/orthanc)$ /orthanc/ redirect;
spec:
  rules:
    - http:
        paths:
          - path: "/orthanc(/|$)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: reference
                port:
                  number: 8042
          - path: "/img(/|$)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: reference
                port:
                  number: 8000
          - path: "/($)?(.*)"
            pathType: Prefix
            backend:
              service:
                name: reference
                port:
                  number: 80
